cmake_minimum_required(VERSION 2.8)
project(websock)
include_directories(${CMAKE_CURRENT_LIST_DIR})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
add_subdirectory(wslay)
find_package(OpenSSL REQUIRED)
add_library(websock WebSock.cpp)
target_link_libraries(websock crypto ssl wslay)
add_executable(example main.cpp)
set_target_properties(example PROPERTIES OUTPUT_NAME websock)
target_link_libraries(example websock)
